--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -313,10 +313,10 @@ on post-fs-data
     mkdir /data/vendor/media 0770 mediacodec media
 
     #Create directories for Fingerprint
-    mkdir /data/vendor/misc/qti_fp 0770 system system
-    mkdir /data/vendor/misc/qti_fp/bg_estimation 0770 system system
-    mkdir /data/vendor/misc/qti_fp/calib_test 0770 system system
-    mkdir /data/vendor/misc/qti_fp/database 0770 system system
+    # mkdir /data/vendor/misc/qti_fp 0770 system system
+    # mkdir /data/vendor/misc/qti_fp/bg_estimation 0770 system system
+    # mkdir /data/vendor/misc/qti_fp/calib_test 0770 system system
+    # mkdir /data/vendor/misc/qti_fp/database 0770 system system
 
     # Create directory used for camera
     mkdir /data/vendor/camera 0770 camera camera
