add old conf to gps
Change-Id: Ifb868d60e8659f0c314aa3506cb7f16a7ffac949

--- a/gps/etc/gps.conf
+++ b/gps/etc/gps.conf
@@ -1,13 +1,4 @@
-NTP_SERVER=id.pool.ntp.org 
-NTP_SERVER=0.id.pool.ntp.org 
-NTP_SERVER=1.id.pool.ntp.org 
-NTP_SERVER=2.id.pool.ntp.org 
-NTP_SERVER=3.id.pool.ntp.org 
-NTP_SERVER=asia.pool.ntp.org
-NTP_SERVER=0.asia.pool.ntp.org
-NTP_SERVER=1.asia.pool.ntp.org
-NTP_SERVER=2.asia.pool.ntp.org
-NTP_SERVER=3.asia.pool.ntp.org
+NTP_SERVER=id.pool.ntp.org
 XTRA_SERVER_1=/data/xtra.bin
 AGPS=/data/xtra.bin
 AGPS=http://xtra1.gpsonextra.net/xtra.bin
@@ -41,3 +32,7 @@ SUPL_TLS_HOST=FQDN
 SUPL_TLS_CERT=/etc/SuplRootCert
 ACCURACY_THRES=5000
 CURRENT_CARRIER=common
+ERR_ESTIMATE=0
+XTRA_CA_PATH=/system/etc/security/cacerts
+DEBUG_LEVEL = 2
+CAPABILITIES=0x77
